terraform/modules/vpc/5-nat.tf
resource "aws_eip" "nat" {
  count     = length(var.public_subnet_cidrs)
  domain    = "vpc"
}

resource "aws_nat_gateway" "nat" {
  count = length(var.public_subnet_cidrs)
  allocation_id = aws_eip.nat[count.index].id
  subnet_id = aws_subnet.public_subnets[count.index].id
  
  tags = {
    Name = "${var.cluster_name}-nat-${count.index + 1}"
  }
}
